--- a/assets/styles/hamburger-menu.css
+++ b/assets/styles/hamburger-menu.css
@@ -35,13 +35,17 @@
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    justify-content: center;
+    align-items: center;
+    /* __________Panel Animation____________ */
     transition: transform .3s ease;
-    transform: translate(100%, 0);
+    /* You can choose the animation  by changing for one of this clases */
+    /*  transform: translate(100%, 0); */
     /* transform: translate(0, -100%); */
     /* transform: translate(-100%, 0); */
     /* transform: translate(0, 100%); */
-    justify-content: center;
-    align-items: center;
+    /* ____________________________________ */
+   
 }
 
 .panel.is-active{
