--- a/assets/styles/root.css
+++ b/assets/styles/root.css
@@ -1,7 +1,8 @@
 :root {
-  --main-color: rgb(61, 61, 61);
-  --second-color: rgb(0, 0, 0);
-  --blue: rgb(10, 102, 141);
+  --main-color: rgb(3, 3, 3);
+  --second-color: rgb(241, 241, 241);
+  --blue: rgb(90, 208, 219);
+  --gray: rgb(29, 29, 29);
 }
 
 html {
